Change time format

--- a/.i3status.conf
+++ b/.i3status.conf
@@ -72,6 +72,6 @@ memory {
 
 tztime local {
         # format = "%Y-%m-%d %H:%M:%S"
-        format = " %a %m.%d  %I:%M "
+        format = " %a %m.%d %l:%M "
 }
 
