--- a/.i3status.conf
+++ b/.i3status.conf
@@ -53,8 +53,8 @@ battery all {
         # status_chr = ""
         status_chr = "⚡"
         # status_bat = "bat"
-        #status_bat = "☉"
-        status_bat = "-"
+        #status_bat = "-"
+        status_bat = ""
         #status_bat = ""
         # status_unk = "?"
         status_unk = ""
