--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -14,8 +14,8 @@ include theme.conf
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-#font_family      Iosevka Nerd Font
-font_family      Iosevka
+font_family      Iosevka Nerd Font
+#font_family      Iosevka
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
