Add option for light theme

--- a/.config/spicetify/config.ini
+++ b/.config/spicetify/config.ini
@@ -2,6 +2,7 @@
 spotify_path     = /opt/spotify
 prefs_path       = /home/enovid/.config/spotify/prefs
 current_theme    = Adapta-Nokto
+;current_theme    = Midnight-Light
 color_scheme     = 
 inject_css       = 1
 replace_colors   = 1
