--- a/.i3/config
+++ b/.i3/config
@@ -27,12 +27,12 @@ font xft:URWGothic-Book 8
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec kitty
+bindsym $mod+Return exec kitty --listen-on unix:/tmp/mykitty
 #bindsym $mod+Return exec kitty --single-instance --listen-on unix:/tmp/mykitty
-#bindsym $mod+n exec kitty --single-instance --listen-on unix:/tmp/mykitty nvim
 
 # kill focused window
 bindsym $mod+Shift+q kill
+bindsym $mod+q kill
 
 # start program launcher
 #bindsym $mod+d exec --no-startup-id dmenu_recency
@@ -80,6 +80,9 @@ bindsym $mod+Ctrl+x --release exec --no-startup-id xkill
 # Use mpv to open url on clipboard 
 bindsym $mod+o --release exec --no-startup-id mpv "$(xclip -out -selection clipboard)"
 
+# End screen recording
+bindsym $mod+c --release exec --no-startup-id blaze --save
+
 focus_follows_mouse no
 
 # change focus
@@ -114,7 +117,7 @@ bindsym $mod+Shift+b move container to workspace back_and_forth; workspace back_
 # split orientation
 bindsym $mod+comma split h;exec notify-send 'tile horizontally'
 bindsym $mod+period split v;exec notify-send 'tile vertically'
-bindsym $mod+q split toggle
+bindsym $mod+e split toggle
 
 # toggle fullscreen mode for the focused container
 bindsym $mod+f fullscreen toggle
