--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -1,5 +1,6 @@
 {
     "suggest.maxCompleteItemCount": 15,
     "python.setInterpreter": "/usr/bin/python",
-    "python.jediEnabled": false
+    "python.jediEnabled": false,
+    "python.linting.enabled": false
 }
