--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -3,6 +3,7 @@
     "python.setInterpreter": "/usr/bin/python",
     "python.jediEnabled": false,
     "python.linting.enabled": false,
+    "python.sortImports.path": "isort",
     "xml.java.home": "/usr/lib/jvm/java-13-openjdk",
     "highlight.disableLanguages": ["pandoc", "vim"]
 }
