--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -14,8 +14,9 @@ include theme.conf
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      Iosevka Nerd Font
+#font_family      Iosevka Nerd Font
 #font_family      Iosevka
+font_family      Consolas
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
@@ -32,7 +33,7 @@ bold_italic_font auto
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 10.0
+font_size 8.0
 
 #: Font size (in pts)
 
@@ -1077,7 +1078,7 @@ map kitty_mod+minus     change_font_size current -1.0
 #: To setup shortcuts for specific font sizes::
 
 #:     map kitty_mod+f6 change_font_size all 10.0
-map kitty_mod+backspace change_font_size current 10.0
+map kitty_mod+backspace change_font_size current 8.0
 
 #: To setup shortcuts to change only the current OS window's font
 #: size::
