--- a/.i3status.conf
+++ b/.i3status.conf
@@ -17,13 +17,13 @@ general {
 
 # order += "ipv6"
 order += "cpu_usage"
-#order += "disk /"
+order += "memory"
+order += "disk /"
 #order += "disk /home"
 #order += "wireless _first_"
 #order += "ethernet _first_"
 order += "battery all"
 # order += "load"
-#order += "memory"
 order += "tztime local"
 
 cpu_usage {
@@ -65,7 +65,7 @@ battery all {
 }
 
 memory {
-        format = "%used | %available"
+        format = "%used / %available"
         threshold_degraded = "1G"
         format_degraded = "MEMORY < %available"
 }
