--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -1,9 +1,14 @@
 {
-    "suggest.maxCompleteItemCount": 15,
     "python.setInterpreter": "/usr/bin/python",
     "python.jediEnabled": false,
     "python.linting.enabled": false,
     "python.sortImports.path": "isort",
     "xml.java.home": "/usr/lib/jvm/java-13-openjdk",
-    "highlight.disableLanguages": ["pandoc", "vim"]
+    "highlight.disableLanguages": [
+      "pandoc",
+      "vim",
+      "markdown",
+      ""
+    ],
+    "clangd.path": "/home/enovid/.config/coc/extensions/coc-clangd-data/install/10.0.0/clangd_10.0.0/bin/clangd"
 }
