Specify theme variant in comment

--- a/.config/kitty/my-themes/iceberg-light.conf
+++ b/.config/kitty/my-themes/iceberg-light.conf
@@ -1,4 +1,4 @@
-# Iceberg colors taken from [iceberg.vim](https://cocopon.github.io/iceberg.vim/)
+# Iceberg light colors taken from [iceberg.vim](https://cocopon.github.io/iceberg.vim/)
 foreground        #33374c
 background        #e8e9ec
 cursor            #33374c
