--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -10,5 +10,6 @@
       "markdown",
       ""
     ],
-    "clangd.path": "/home/enovid/.config/coc/extensions/coc-clangd-data/install/10.0.0/clangd_10.0.0/bin/clangd"
+    "clangd.path": "/home/enovid/.config/coc/extensions/coc-clangd-data/install/10.0.0/clangd_10.0.0/bin/clangd",
+    "coc.preferences.formatOnSaveFiletypes": ["sql"]
 }
