--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1009,7 +1009,7 @@ map kitty_mod+]   scroll_page_down
 #: open a window with the current working directory.
 
 # map kitty_mod+w close_window
-# map kitty_mod+] next_window
+map kitty_mod+n next_window
 # map kitty_mod+[ previous_window
 # map kitty_mod+f move_window_forward
 # map kitty_mod+b move_window_backward
