--- a/.config/nvim/coc-settings.json
+++ b/.config/nvim/coc-settings.json
@@ -3,7 +3,7 @@
     "python.jediEnabled": false,
     "python.linting.enabled": false,
     "python.sortImports.path": "isort",
-    "xml.java.home": "/usr/lib/jvm/java-13-openjdk",
+    "xml.java.home": "/usr/lib/jvm/java-11-openjdk",
     "highlight.disableLanguages": [
       "pandoc",
       "vim",
@@ -11,5 +11,6 @@
       ""
     ],
     "clangd.path": "/home/enovid/.config/coc/extensions/coc-clangd-data/install/10.0.0/clangd_10.0.0/bin/clangd",
-    "coc.preferences.formatOnSaveFiletypes": ["sql"]
+    "coc.preferences.formatOnSaveFiletypes": ["sql"],
+    "java.home": "/usr/lib/jvm/java-11-openjdk/",
 }
