--- a/.config/spicetify/config.ini
+++ b/.config/spicetify/config.ini
@@ -1,7 +1,8 @@
 [Setting]
 spotify_path     = /opt/spotify
 prefs_path       = /home/enovid/.config/spotify/prefs
-current_theme    = Adapta-Nokto
+;current_theme    = Adapta-Nokto
+current_theme    = Nord
 ;current_theme    = Midnight-Light
 color_scheme     = 
 inject_css       = 1
